[tool.poetry]
name = "ppm-aggressive-incidents"
version = "0.1.0"
description = ""
authors = ["Olusanmi Hundogan <o.hundogan@gmail.com>"]
readme = "README.md"
packages = [{include = "ppm_aggressive_incidents"}]

[tool.poetry.dependencies]
python = "^3.11"
gym = "^0.26.2"
jupyter = "^1.0.0"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
ipython = "^8.21.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
gymnasium = "^0.29.1"
graphviz = "^0.20.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
